--- a/index.html
+++ b/index.html
@@ -17,13 +17,20 @@
 
   <div class="main">
     <div class = "top-bar">
-      <img  src="./imageAssets/vilogo.png" alt="hflogo" width="100" height="140">
+      <div class="top-bar-div">
+        <img  src="./imageAssets/vilogo.png" alt="hflogo" class="top-bar-image">
+      </div>
+      
+      <div class="tob-bar-div">
 
-      <img  src="./imageAssets/hflogo.png" alt="hflogo" width="500" height="180">
+        <img  src="./imageAssets/hflogo.png" alt="hflogo"  class="top-bar-image">
+      </div>
 
-      <img  src="./imageAssets/mlsclogo.png" alt="hflogo" width="190" height="180">
+      <div class="tob-bar-div">
+        <img  src="./imageAssets/mlsclogo.png" alt="hflogo"  class="top-bar-image">
+      </div>
     </div>
-    <h1> HACKTOBERFEST 2023 contributors! </h1>
+    <h1 class="main-heading"> HACKTOBERFEST 2023 contributors! </h1>
     <h2>Participants</h2>
     <div id="participants">
     </div>
